main-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: main-gateway
  namespace: default
spec:
  gatewayClassName: nginx
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: All
 # - name: https
 #   protocol: HTTPS
 #   port: 443
 #   tls:
 #     mode: Terminate
 #     certificateRefs:
 #       - name: demo-cert
 #         kind: Secret
