HTTPRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: traffic-split-httproute
  namespace: default
spec:
  parentRefs:
  - name: main-gateway
  hostnames:
  - "backends.example"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - group: ""
      kind: Service
      name: aks-helloworld-v1
      port: 80
